# SimpleObjectDrawingLibrary

./: .gitignore  CMakeLists.txt  LICENSE  SimpleObjectDrawLib.sln
SODL_sample_00/: CMakeLists.txt  SODL_sample_00.vcxproj  SODL_sample_00.vcxproj.filters  Source.cpp  assimp_log.txt  include
SODL_sample_015_6AxRobot/: CMakeLists.txt
SODL_sample_01_CoordinateChain/: CMakeLists.txt  SODL_sample_01_CoordinateChain.vcxproj  SODL_sample_01_CoordinateChain.vcxproj.filters  SODL_sample_01_CoordinateChain_main.cpp
SODL_sample_01_LoadModel/: CMakeLists.txt  SODL_sample_01_LoadModel_main.cpp
SODL_sample_02_6AxRobot/: CMakeLists.txt  SODL_sample_02_6AxRobot_main.cpp
SODL_sample_02_LoadModel/: CMakeLists.txt  SODL_sample_02_LoadModel.vcxproj  SODL_sample_02_LoadModel.vcxproj.filters  SODL_sample_02_LoadModel_main.cpp  assimp_log.txt
SODL_sample_03_MultiViewPort/: CMakeLists.txt  SODL_sample_03_MultiViewPort.vcxproj  SODL_sample_03_MultiViewPort.vcxproj.filters  SODL_sample_03_MultiViewPort_main.cpp  assimp_log.txt
SODL_sample_04_DrawGraph/: CMakeLists.txt  SODL_sample_01_CoordinateChain.vcxproj  SODL_sample_04_DrawGraph.vcxproj  SODL_sample_04_DrawGraph.vcxproj.filters  SODL_sample_04_DrawGraph_main - コピー.cpp  SODL_sample_04_DrawGraph_main.cpp  assimp_log.txt
SODL_sample_05_DrawGraph3D/: CMakeLists.txt  SODL_sample_05_DrawGraph3D_main.cpp
SODL_sample_06_Graph3D_WithUI/: CMakeLists.txt  SODL_sample_06_Graph3D_WithUI_main.cpp  VifClass_PlotCnfg.cpp  VifClass_PlotCnfg.h
SimpleObjectDrawLib/: CMakeLists.txt  CoordChain3dMdl.cpp  CoordChainObj.cpp  CoordChainObj.h  Drawable3dMdlClass.cpp  Drawable3dMdlClass.h  DrawableObjectClass.cpp  DrawableObjectClass.h  DrawingManager.cpp  DrawingManager.h  GLTypedef.h  GraphObj.cpp  GraphObj3D.cpp  IDrawableObjBase.cpp  IDrawableObjBase.h  ISodlObjBase.cpp  ISodlObjBase.h  SimpleObjectDrawLib.vcxproj  SimpleObjectDrawLib.vcxproj.filters  SimpleObjectDrawingLibrary.h  TimeSeriesGraph.cpp  TimeSeriesGraph.h  assimpGlUtil.cpp  assimpGlUtil.h  assimp_log.txt  fGlutTest.vcxproj  fGlutTest.vcxproj.filters  glDrawExt.cpp
SimpleObjectDrawLib/3dModel/: X_Rail.stl  Y_Rail.FCStd  Y_Rail.FCStd1  Y_Rail.stl  Z_Rail.ast  Z_Rail.stl  cylinder.stl  head_cone.stl
SimpleObjectDrawLib/include/: CoordChain3dMdl.h  CoordChainObj.h  Drawable3dMdlClass.h  DrawableObjectClass.h  DrawingManager.h  GraphObj.h  GraphObj3D.h  IDrawableObjBase.h  ISodlObjBase.h  SimpleObjectDrawingLibrary.h  TimeSeriesGraph.h  assimpGlUtil.h  glDrawExt.h
bin_samples/: plot.ini
bin_samples/3dModel/SimpleRobot6Ax/: BasePlate.stl  E1.stl  S1.stl  S2.stl  W1.stl  W2.stl  W3.stl
bin_samples/plotData/: plotData.csv  plotData2.csv
docs/: BuildLibraryAndSamples.md  FunctionExplainedWithSamples.md  InstallDependency.md  README.md  sample_01_LoadModel.md  sample_02_6AxRobot.md  sample_03_MultiViewPort.md  sample_04_DrawGraph.md
docs/fig/: tmp.pptx
